Fix font size on mobile

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -54,7 +54,7 @@
 .text {
   font-family: SansForgetica, sans-serif;
   color: #333;
-  font-size: 6.3vw;
+  font-size: 5em;
 }
 
 .title {
